# urirun

./: .env.example  .gitignore  BACKLOG-AGENT.md  CHANGELOG.md  Makefile  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  find_comments.py  format_js.py  goal.yaml  package-lock.json  package.json  planfile.yaml  temp_script_0.js  temp_script_formatted.js  tree.txt  where_response.json
adapters/: SPEC.md  (+2 more)
adapters/python/: CHANGELOG.md  README.md  conftest.py  local.dev.txt  pyproject.toml
adapters/python/.urirun/: discovered-registry.json
adapters/python/scripts/: dev_deps_doctor.py  heal_future_imports.py  validate_connectors.py
adapters/python/tests/: test_access.py  test_adopt_pack.py  test_adopt_tree.py  test_agent_admin.py  test_artifacts.py  test_autonomy_mode.py  test_chat_node_default.py  test_cli_parser.py  test_compat.py  test_config.py  test_connect_catalog.py  test_connector_contract.py  test_connector_openapi.py  test_connector_smoke.py  test_contracts.py  test_core_import_smoke.py  test_daemon.py  test_dashboard_api_characterizing.py  test_dashboard_health_api.py  test_dashboard_js.py  test_dev_deps_doctor.py  test_diagnostics.py  test_discovery.py  test_dispatch_protocol.py  test_distribution_name_collision.py  test_domain_monitor.py  test_env_loader.py  test_environment_topology.py  test_episode_capture.py  test_exec.py  test_flow.py  test_flow_reversible.py  test_flow_rollup.py  test_flow_scheme.py  test_flow_twin.py  test_fs_transfer.py  test_host_dashboard.py  test_host_db.py  test_host_dispatch_remediation.py  test_host_integrations.py  (+57 more)
(+326 files in other folders)
