[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urihandler"
version = "0.3.0"
description = "Language-agnostic URI to handler adapter"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
urihandler = "urihandler.v5:main"
urihandler-v4 = "urihandler.v4:main"
urihandler-v5 = "urihandler.v5:main"

[tool.setuptools.packages.find]
where = ["."]
